--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,16 @@
 
 /*--------------------------------------------Colors*/
 
+.bg-color-name-title {
+    background-color: #676767;
+}
+
 .bg-color-three-reasons {
     background-color: #fff;
 }
 
 .ui-menu-color-home {
-    background-color: #e65e22;
+    background-color: #e67e22;
 }
 
 .ui-menu-color-resume {
@@ -22,12 +26,24 @@
     background-color: #525252;
 }
 
-.bg-color-name-title {
-    background-color: #676767;
+.row-table {
+    display: table;
 }
 
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
 
-/*--------------------------------------------Special paddings/margins/text */
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
+/* ----------------------------------------Special paddings/margins/text */
 
 h1,
 h2,
@@ -65,7 +81,6 @@ h4 {
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 40px;
-    
 }
 
 /*--------------------------------------------Heading*/
@@ -104,7 +119,6 @@ header {
     margin-top: 20px;
     margin-bottom: 90px;
     color: #fff;
-    
 }
 
 .list-inline-item:not(:last-child) {
@@ -115,13 +129,13 @@ header {
     font-size: 0;
 }
 
-#nav {
-    margin: 0;
-}
-
 #nav li {
     font-size: 14px;
     padding: 0;
+}
+
+#nav {
+    margin: 0;
 }
 
 .menuitem {
@@ -155,14 +169,14 @@ header {
     letter-spacing: 2px;
 }
 
-/*--------------------------------------------hover.css*/
+/*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
-    
 }
-/*--------------------------------------------Footer */
+
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #525252;
@@ -171,7 +185,7 @@ footer {
     margin: 0;
 }
 
-.cv-pdf {
+.cv-pdf i {
     font-size: 18px;
     color: #fafafa;
     text-align: center;
@@ -184,7 +198,6 @@ footer {
 
 .cv-pdf i:hover {
     color: #e84610;
-
 }
 
 .social-links {
@@ -205,13 +218,23 @@ footer {
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
-
 }
 
 .social-links li a i:hover {
-    background-color: #e84610;
+    background: #e84610;
 }
 
 #footer-details {
     padding: 20px;
+}
+
+/*--------------------------------------------Three reasons*/
+
+.three-reasons-icon {
+    font-size: 26px;
+    color:#e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
 }
